--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,7 @@ jobs:
         with:
           user: __token__
           password: ${{ secrets.PYPI_API_KEY }}
-          packages-dir: dist/
+          packages-dir: python/dist/
 
   build-and-publish-mcp:
     runs-on: ubuntu-latest
@@ -75,4 +75,4 @@ jobs:
         with:
           user: __token__
           password: ${{ secrets.PYPI_API_KEY }}
-          packages-dir: dist/
+          packages-dir: python/dist/
